# trakt

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  config.example.toml
.afk/: runtime-lock.json  workflow-manifest.json
.afk/runner/: afk.mjs
.afk/scheduler/: linux-user-scheduler.sh  macos-launch-agent.sh  windows-register.ps1
.afk/scripts/: gates.mjs  poller.mjs
.afk/workspace/: package.json
.github/workflows/: ci.yml
docs/: layer4-reverse-proxy-references.md  protocol-references.md  raknet-udp-reverse-proxy-references.md  rust-udp-reverse-proxy-references.md
src/: config.rs  health.rs  load_balancer.rs  main.rs  metrics.rs  motd.rs  proxy.rs  ratelimit.rs
src/raknet/: mod.rs  ping.rs
src/raknet/message/: mod.rs  offline.rs
