[package]
name = "trakt"
description = "Reverse proxy and load balancer for Minecraft: Bedrock Edition"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Unoqwy/trakt"
readme = "README-cratesio.md"
keywords = ["minecraft", "bedrock", "proxy"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

fdlimit = "0.3"
anyhow = "1.0"
bytes = "1.9"
rand = "0.8"
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "io-std", "fs", "signal", "macros"] }
tokio-util = "0.7"
ppp = "2.2"
governor = "0.10"
dashmap = "6"

[[bin]]
path = "src/main.rs"
name = "trakt"
